--- a/odoo.conf
+++ b/odoo.conf
@@ -4,7 +4,6 @@ data_dir = /var/lib/odoo
 ; admin_passwd = admin
 ; csv_internal_sep = ,
 ; db_maxconn = 64
-; db_name = False
 ; db_template = template1
 ; dbfilter = .*
 ; debug_mode = False
@@ -14,7 +13,6 @@ data_dir = /var/lib/odoo
 ; limit_request = 8192
 ; limit_time_cpu = 60
 ; limit_time_real = 120
-; list_db = True
 ; log_db = False
 ; log_handler = [':INFO']
 ; log_level = info
@@ -36,4 +34,5 @@ data_dir = /var/lib/odoo
 ; xmlrpcs_interface = 
 ; xmlrpcs_port = 8071
 proxy_mode = True
-
+;list_db = False
+;db_name = fuelboss1
