--- a/apache_virtual.conf
+++ b/apache_virtual.conf
@@ -2,10 +2,14 @@
     ProxyPreserveHost On
     ServerName odoo.bring.out.ba
     ServerAlias *.odoo.bring.out.ba
-
+    LogLevel debug
     RewriteEngine on
 
+    RewriteCond "%{HTTP:Upgrade}" "websocket" [NC]
+    RewriteCond "%{HTTP:Connection}" "Upgrade" [NC]
     RewriteCond "%{HTTP_HOST}" "^(.*).odoo.bring.out.ba$" [NC]
+
+    #RewriteRule "/websocket/(.*)" "ws://192.168.xxx.yyy:8072/websocket/$1" [P,L]
     RewriteRule "^(.*)$" "https://odoo.bring.out.ba$1" [R=301,L]
 
     RequestHeader set X-Forwarded-Proto https
@@ -18,9 +22,14 @@
        SSLRequireSSL
     </Location>
 
-    ProxyPass /longpolling/ http://192.168.xxx.yyy:8072/ retry=0
-    ProxyPassReverse /longpolling/ http://192.168.xxx.yyy:8072/ retry=0
+    <Location "/websocket">
+       SSLRequireSSL
+       ProxyPass ws://192.168.xxx.yyy:8072/websocket/
+    </Location>
+
 
     ProxyPass        / http://192.168.xxx.yyy:8069/
     ProxyPassReverse / http://192.168.xxx.yyy:8069/
+
 </VirtualHost>
+
